<resources>
    <string name="app_name">Project</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_in_to_access_your_account">sign in to access your account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="by_creating_a_free_account">by creating a free account</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="log_in">Log in</string>
    <string name="get_started">Get Started</string>
    <string name="full_name">Full Name</string>
    <string name="valid_email">Valid Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="strong_password">Strong Password</string>
    <string name="terms_and_conditions">By checking the box, you agree to our Terms and Conditions.</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register Now</string>
</resources>